examples/datalog/17_rule_commands/25_rule_list_filtered.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_rule_list
Knowledge graph 'test_rule_list' created.
Switched to knowledge graph: test_rule_list
> .kg use test_rule_list
Switched to knowledge graph: test_rule_list
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> +rule_a(X, Y) :- base(X), Y = X + 1.
Script error: Failed to register rule: Unsafe rule 'rule_a': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
